--- a/public/css/list.css
+++ b/public/css/list.css
@@ -3,3 +3,52 @@
     padding : 0;
     box-sizing :0;
 }
+
+h1 {
+    text-align: center;
+    color: tomato;
+    font-size: 40px;
+}
+
+a {
+    text-decoration : none;
+    color : #333;
+}
+
+ul, li {
+    list-style : none;
+}
+
+table {
+    /* border-collapse : collapse; */
+    border : 2px solid black;
+}
+
+.board-table {
+    width : 100%;
+    margin-top : 20px;
+}
+
+.board-table > thead {
+    background: white;
+    color: black;
+}
+
+.board-table > thead > tr > th {
+    padding : 10px 14px;
+}
+
+.board-table > thead > tr > td {
+    padding : 12px 14px;
+    border-bottom: 1px solid #ddd;
+    text-align: center;
+}
+
+.btn {
+    display: inline-block;
+    padding: 7px 14px;
+    background: #efefef;
+    border: 2px solid #000;
+    margin-top: 10px;
+    font-size: 11px;
+}
