--- a/public/css/list.css
+++ b/public/css/list.css
@@ -24,6 +24,10 @@ li {
   list-style: none;
 }
 
+.container {
+  padding: 0 20px;
+}
+
 table {
   border: 2px solid black;  
 }
@@ -49,8 +53,12 @@ table {
   text-align: center;
 }
 
+.button-container{
+  display: flex;
+  justify-content: space-between;
+}
+
 .btn {
-  display: inline-block;
   padding: 7px 14px;
   background: #d3d3d3c4;
   border: 2px solid #000;
