fix: write.html (h2 태그 내용 수정) & write.css (modify.css에 맞추기 + 글씨 크기 조정) 수정

--- a/public/css/write.css
+++ b/public/css/write.css
@@ -7,6 +7,13 @@
 a {
   text-decoration: none;
   color: tomato;
+  font-size: 3rem;
+}
+
+h1, h2 {
+  color: tomato;
+  text-align: center;
+  font-size: 2rem;
 }
 
 ul,
@@ -20,6 +27,12 @@ li {
 
 .board-write-form {
   width: 500px;
+  /* width: 1200px;   */
+}
+
+form {
+  width: 32rem;
+  margin: auto;
 }
 
 form li {
@@ -34,21 +47,33 @@ form ul {
 }
 
 li > span {
-  width: 50px;
+  width: 70px;
   position: relative;
   top: 11px;
-  left: 10px;
+  /* left: 10px; */
+  left: 20px;
   background: #fff;
+  font-size: 1.2rem;
+  font-weight: 900;
+  text-align: center;
+
 }
 
 li > input {
   padding: 10px 18px;
-  border: 1px solid #999;
+  border: 1px solid tomato;
+  border-radius: 1rem;
 }
 
 li > textarea {
   height: 500px;
   padding: 20px;
-  border: 1px solid #999;
+  border: 1px solid tomato;
   resize: none;
+  border-radius: 1rem;
+}
+
+.btn {
+  margin-top: 1rem;
+  background-color: tomato;
 }
